--- a/styles/style.css
+++ b/styles/style.css
@@ -13,3 +13,23 @@
   color: rgb(43, 43, 94);
   background-color: rgb(182, 227, 227);
 }
+
+.directions-list {
+  list-style: none;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.directions-item {
+  color: rgb(103, 26, 122);
+  font-weight: 700;
+  border: 2px solid blue;
+  padding: 5px;
+  cursor: pointer;
+  transition: background-color 1500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.directions-item:hover {
+  background-color: rgb(180, 199, 186);
+}
