--- a/styles/style.css
+++ b/styles/style.css
@@ -305,6 +305,52 @@ p {
   background-color: rgb(180, 199, 186);
 }*/
 
+.planet-list {
+  list-style: none;
+  margin-bottom: 20px;
+}
+
+.planet-label {
+  color: #e766da;
+  line-height: 0%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .planet-label {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .planet-label {
+    font-size: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .planet-label {
+    font-size: 48px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .planet-label {
+    font-size: 30px;
+  }
+}
+
+.select-zn-zodiak {
+  border-radius: 10px;
+  background: rgba(86, 75, 108, 0.33);
+  text-align: center;
+  color: #000;
+  line-height: 0%;
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+}
+
 body {
   background: rgba(97, 18, 124, 0.16);
 }
