--- a/styles/style.css
+++ b/styles/style.css
@@ -665,6 +665,21 @@ p {
   }
 }
 
+.planet-item {
+  border: 4px solid #4a2b7c;
+  padding: 35px;
+  cursor: pointer;
+  transition: background-color 500ms linear;
+  transition: box-shadow 500ms linear;
+  border-radius: 10px;
+
+}
+
+.planet-item:hover {
+  background-color: #f7f6f1;
+  box-shadow: 15px 10px 10px #5e7477;
+}
+
 @media screen and (min-width: 1200px) {
   .planet-item {
     display: grid;
