--- a/styles/style.css
+++ b/styles/style.css
@@ -90,13 +90,15 @@ li {
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .planet-one-title {
     font-size: 42px;
+    margin-bottom: 60px;
+    text-align: center;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .planet-one-title {
     font-size: 28px;
-    margin-bottom: 35px;
+    margin-bottom: 40px;
     text-align: center;
   }
 }
@@ -122,14 +124,26 @@ li {
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
+  .planet-two-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .aspect-title {
     font-size: 39px;
+    margin-bottom: 60px;
+    text-align: center;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .aspect-title {
     font-size: 26px;
+    margin-bottom: 40px;
+    text-align: center;
   }
 }
 
@@ -156,14 +170,35 @@ li {
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .planet-two-title {
     font-size: 39px;
+    margin-bottom: 30px;
+    text-align: center;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .planet-two-title {
     font-size: 26px;
+    margin-bottom: 20px;
+    text-align: center;
   }
 
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .planet-two-item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 45px;
+  }
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .planet-two-item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 45px;
+  }
 }
 
 .main-title {
