--- a/styles/style.css
+++ b/styles/style.css
@@ -116,6 +116,7 @@ li {
 @media screen and (min-width: 1200px) {
   .aspect-title {
     font-size: 62px;
+    margin-left: 400px;
   }
 }
 
@@ -160,6 +161,9 @@ li {
 @media screen and (min-width: 1200px) {
   .planet-two-title {
     font-size: 62px;
+    margin-left: 900px;
+    margin-bottom: 55px;
+    width: 300px;
   }
 }
 
@@ -175,6 +179,23 @@ li {
   .period-item {
     text-align: center;
   }
+}
+
+@media screen and (min-width: 1200px) {
+  .period-item {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .period-list {
+    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: 250px 250px 1fr;
+    row-gap: 50px;
+    column-gap: 160px;
+  }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
