--- a/styles/style.css
+++ b/styles/style.css
@@ -175,6 +175,8 @@ li {
   }
 }
 
+
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .period-item {
     text-align: center;
@@ -264,6 +266,7 @@ li {
   font-style: italic;
   font-weight: 700;
   font-family: "Roboto", sans-serif;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 1200px) {
