--- a/styles/style.css
+++ b/styles/style.css
@@ -346,6 +346,47 @@ li {
   }
 }
 
+.title-bisekstil {
+  text-align: center;
+  color: #137b42;
+  letter-spacing: 0.2em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 1200px) {
+  .title-bisekstil {
+    font-size: 90px;
+    line-height: 10%;
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .title-bisekstil {
+    font-size: 22px;
+    line-height: 38%;
+    margin-bottom: 42px;
+  }
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .title-bisekstil {
+    font-size: 33px;
+    line-height: 26%;
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .title-bisekstil {
+    font-size: 59px;
+    line-height: 16%;
+    margin-bottom: 66px;
+  }
+}
+
 .tau-kvadrat-list {
   display: flex;
   flex-direction: column;
@@ -353,7 +394,17 @@ li {
   justify-content: center;
   list-style: none;
   gap: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
+}
+
+.bisekstil-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  gap: 30px;
+  margin-bottom: 60px;
 }
 
 .aspects-period {
@@ -394,6 +445,41 @@ li {
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .tau-kvadrat-paragh {
+    font-size: 15px;
+    line-height: 278%;
+  }
+}
+
+.bisekstil-paragh {
+  color: rgb(91, 133, 167);
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .bisekstil-paragh {
+    font-size: 40px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .bisekstil-paragh {
+    font-size: 36px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .bisekstil-paragh {
+    font-size: 24px;
+    line-height: 185%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .bisekstil-paragh {
     font-size: 15px;
     line-height: 278%;
   }
