--- a/styles/style.css
+++ b/styles/style.css
@@ -387,6 +387,47 @@ li {
   }
 }
 
+.title-bigtrigon {
+  text-align: center;
+  color: #391b07;
+  letter-spacing: 0.2em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 1200px) {
+  .title-bigtrigon {
+    font-size: 90px;
+    line-height: 10%;
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .title-bigtrigon {
+    font-size: 22px;
+    line-height: 38%;
+    margin-bottom: 42px;
+  }
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .title-bigtrigon {
+    font-size: 33px;
+    line-height: 26%;
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .title-bigtrigon {
+    font-size: 59px;
+    line-height: 16%;
+    margin-bottom: 66px;
+  }
+}
+
 .tau-kvadrat-list {
   display: flex;
   flex-direction: column;
@@ -398,6 +439,16 @@ li {
 }
 
 .bisekstil-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  gap: 30px;
+  margin-bottom: 60px;
+}
+
+.bigtrigon-list {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -480,6 +531,41 @@ li {
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .bisekstil-paragh {
+    font-size: 15px;
+    line-height: 278%;
+  }
+}
+
+.bigtrigon-paragh {
+  color: rgb(18, 15, 56);
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .bigtrigon-paragh {
+    font-size: 40px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .bigtrigon-paragh {
+    font-size: 36px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .bigtrigon-paragh {
+    font-size: 24px;
+    line-height: 185%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .bigtrigon-paragh {
     font-size: 15px;
     line-height: 278%;
   }
