--- a/styles/style.css
+++ b/styles/style.css
@@ -428,6 +428,47 @@ li {
   }
 }
 
+.title-obiquesail {
+  text-align: center;
+  color: #5b0e61;
+  letter-spacing: 0.2em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 1200px) {
+  .title-obiquesail {
+    font-size: 90px;
+    line-height: 10%;
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .title-obiquesail {
+    font-size: 22px;
+    line-height: 38%;
+    margin-bottom: 42px;
+  }
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .title-obiquesail {
+    font-size: 33px;
+    line-height: 26%;
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .title-obiquesail {
+    font-size: 59px;
+    line-height: 16%;
+    margin-bottom: 66px;
+  }
+}
+
 .tau-kvadrat-list {
   display: flex;
   flex-direction: column;
@@ -449,6 +490,16 @@ li {
 }
 
 .bigtrigon-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  gap: 30px;
+  margin-bottom: 60px;
+}
+
+.obiquesail-list {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -566,6 +617,41 @@ li {
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .bigtrigon-paragh {
+    font-size: 15px;
+    line-height: 278%;
+  }
+}
+
+.obiquesail-paragh {
+  color: rgb(47, 45, 80);
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .obiquesail-paragh {
+    font-size: 40px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .obiquesail-paragh {
+    font-size: 36px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .obiquesail-paragh {
+    font-size: 24px;
+    line-height: 185%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .obiquesail-paragh {
     font-size: 15px;
     line-height: 278%;
   }
