add: big square done
add: big square done

--- a/styles/style.css
+++ b/styles/style.css
@@ -510,6 +510,48 @@ li {
   }
 }
 
+
+.title-bigsquare {
+  text-align: center;
+  color: #3a26a0;
+  letter-spacing: 0.2em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 1200px) {
+  .title-bigsquare {
+    font-size: 90px;
+    line-height: 10%;
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .title-bigsquare {
+    font-size: 22px;
+    line-height: 38%;
+    margin-bottom: 42px;
+  }
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .title-bigsquare {
+    font-size: 33px;
+    line-height: 26%;
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .title-bigsquare {
+    font-size: 59px;
+    line-height: 16%;
+    margin-bottom: 66px;
+  }
+}
+
 .tau-kvadrat-list {
   display: flex;
   flex-direction: column;
@@ -547,6 +589,15 @@ li {
 }
 
 .cart-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  gap: 30px;
+}
+
+.bigsquare-list {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -628,6 +679,42 @@ li {
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .bisekstil-paragh {
+    font-size: 15px;
+    line-height: 278%;
+  }
+}
+
+
+.bigsquare-paragh {
+  color: rgb(139, 50, 151);
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .bigsquare-paragh {
+    font-size: 40px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .bigsquare-paragh {
+    font-size: 36px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .bigsquare-paragh {
+    font-size: 24px;
+    line-height: 185%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .bigsquare-paragh {
     font-size: 15px;
     line-height: 278%;
   }
